[package]
name = "netsblox-stateflow-ext"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
netsblox-stateflow = "0.1.2"
netsblox-extension-macro = "0.1.0"
netsblox-extension-util = "0.2.4"
js-helpers = "0.1.5"
getrandom = { version = "0.2.15", features = ["js"] }
console_error_panic_hook = "0.1.7"

[build-dependencies]
netsblox-extension-util = "0.2.4"
